--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-Hello World
+<!doctype html>
+
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Technical Projects by Jon Cinque</title>
+    <meta name="description" content="Jon Cinque Tech">
+    <meta name="author" content="Jon Cinque">
+    <!-- Bootstrap -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- For the site -->
+    <link rel="stylesheet" href="css/styles.css">
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <!--<script src="js/scripts.js"></script>-->
+    <div class="container">
+      <header class="center">
+        <div class="row">
+          <div class="col-xs-12">
+            <h1>Sorry, Jon's site is currently being built, like right now.</h1>
+          </div>
+        </div>
+        <div class="clearfix"></div>
+        <div class="row">
+          <div class="col-xs-12">
+            <h2>Check back soon!</h2>
+          </div>
+        </div>
+      </header>
+    </div>
+  </body>
+</html>
