Add two blog posts, disqus, and SEO fixup

--- a/cryptocurrency/index.html
+++ b/cryptocurrency/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Cryptocurrencies</title>
+        <title>Cryptocurrencies | Jon Cinque, Software Dev</title>
         <link rel="stylesheet" href="./css/reveal.css">
         <link rel="stylesheet" href="./css/theme/black.css" id="theme">
         <link rel="stylesheet" href="./css/highlight/zenburn.css">
         <link rel="stylesheet" href="./css/print/paper.css" type="text/css" media="print">
+        <meta property="og:title" content="Cryptocurrencies" />
+        <meta property="og:locale" content="en_US" />
+        <meta name="description" content="Why are cryptocurrencies so hot? A technological and financial overview at the functioning of cryptocurrencies, technologically and financially." />
+        <meta property="og:description" content="Why are cryptocurrencies so hot? A technological and financial overview at the functioning of cryptocurrencies, technologically and financially." />
+        <link rel="canonical" href="https://jonc.dev/cryptocurrencies" />
+        <meta property="og:url" content="https://jonc.dev/cryptocurrencies" />
+        <meta property="og:site_name" content="Jon Cinque, Software Dev" />
 
     </head>
     <body>
